Fix button z-index introduced in material-ui update

--- a/client/components/OverlayStack/OverlayStack.scss
+++ b/client/components/OverlayStack/OverlayStack.scss
@@ -6,6 +6,11 @@
   position: relative;
   overflow: hidden;
 
+  button {
+
+    z-index: 0 !important;
+  }
+
   .tab_stack {
 
     position: absolute;
